# kpf

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README-vhs.md  README.md  demo.tape  gke_gcloud_auth_plugin_cache  justfile  kpf.py  pyproject.toml  pytest.ini  test_display.py  test_rich.py  timestamp.txt
.agent/: RULES.md
.config/kpf/: kpf-config.json  kpf.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: actions-add.yml  audit.yml  pypi-publish.yml  release.yml  run-tests.yml  test.yml  update-homebrew.yml
completions/: _kpf  kpf.bash
docs/: kpf-demo_tui.tape
scripts/: audit_dependencies.py  update_dependencies.py
src/kpf/: __init__.py  __main__.py  cli.py  config.py  config_wizard.py  connectivity.py  display.py  forwarder.py  history.py  history_logger.py  kubernetes.py  logger.py  main.py  network_watchdog.py  usage_logger.py  validators.py  watcher.py
src/kpf/completions/: __init__.py  _kpf  kpf.bash
test-completions/: .zsh_history  .zshrc  README.md  docker-run.sh
test-pod/: README.md  kpf-test-app.yaml  restart-test-app.py
tests/: __init__.py  conftest.py  test_cli.py  test_completions.py  test_display.py  test_history.py  test_integration.py  test_kubernetes.py  test_main.py  test_network_watchdog.py
