[project]
name = "kpf"
version = "0.12.6"
description = "TUI for kubectl port-forward"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jesse Goodier" }]
keywords = ["kubernetes", "kubectl", "port-forward", "k8s", "devops", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "rich>=15",
    "requests>=2.34.2",
    "prompt-toolkit>=3.0.52",
    "readchar>=4.2.2",
]

[dependency-groups]
dev = [
    "build>=1.5",
    "bump-my-version>=1.4.1",
    "coverage>=7.14.3",
    "hatchling>=1.30.1",
    "isort>=8.0.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.20",
]

[project.urls]
Homepage = "https://github.com/jessegoodier/kpf"
Repository = "https://github.com/jessegoodier/kpf"
Issues = "https://github.com/jessegoodier/kpf/issues"

[project.scripts]
kpf = "kpf.cli:main"
kpfh = "kpf.cli:history_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/kpf"]

[tool.hatch.build.targets.wheel]
packages = ["src/kpf"]
artifacts = ["src/kpf/completions/*"]

[tool.hatch.build.targets.sdist]
include = ["src/kpf"]

[tool.ruff]
line-length = 100
indent-width = 4
format.indent-style = "space"
target-version = "py310"
src = ["src", "tests"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["kpf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test*.py"]
python_classes = ["Test*"]
python_functions = ["test*"]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "{arch}",
    "*.egg",
    "venv",
    "requirements*",
    "lib",
]
addopts = [
    "--cov-branch",
    "--cov-report=term",
    "--cov-report=html",
    "--verbose",
    "--tb=short",
    "--cov=src/kpf",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:tests/coverage.xml",
    "--cov-fail-under=50",
    "--timeout=10",
]

[tool.bumpversion]
current_version = "0.12.6"
commit = true
tag = true
allow_dirty = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
message = "Bump version: {current_version} → {new_version}"
pre_commit_hooks = ["uv sync", "git add uv.lock"]


[[tool.bumpversion.files]]
filename = "src/kpf/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "tests/test_integration.py"
search = 'assert "{current_version}" in result.stdout'
replace = 'assert "{new_version}" in result.stdout'
